--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,8 +11,15 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap
+ *= require font-awesome
  *= require adminlte/adminlte
  *= require adminlte/skins/_all-skins
- *= require font-awesome
+ *= require bootstrap-timepicker.min
+ *= require bootstrap-datetimepicker.min
+ *= require daterangepicker.min
+ *= require bootstrap-select.min
+ *= require direct_uploads
+ *= require morris
+ *= require main
  *= require_self
  */
