管理员登录

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= render 'shared_admin/head' %>
+    <%= render 'admin/shared/head' %>
   </head>
 
   <body class="skin-blue sidebar-mini ext-webkit ext-chrome ext-mac">
     <div class="wrapper">
-      <%= render 'shared_admin/navbar' %>
-      <%= render 'shared_admin/sidebar' %>
+      <%= render 'admin/shared/navbar' %>
+      <%= render 'admin/shared/sidebar' %>
       <div class="content-wrapper">
-        <%= render 'shared_admin/flashes' %>
+        <%= render 'admin/shared/flashes' %>
         <section class="content-header">
           <%= yield :content_header %>
         </section>
