--- a/app/views/admin/shared/_navbar.html.erb
+++ b/app/views/admin/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
           <!-- Menu Footer-->
           <li class="user-footer">
           <div class="pull-right">
-            退出
+            <%= link_to "退出", admin_sign_out_path, method: :delete, class: "btn btn-default btn-flat" %>
           </div>
           </li>
         </ul>
