--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,8 @@
  *= require main
  *= require_self
  */
+
+@font-face {
+  font-family: 'Glyphicons Halflings';
+  src: font-url('fonts/glyphicons-halflings-regular.woff2') format('woff2')
+}
