--- a/app/views/admin/shared/_modal_img.html.erb
+++ b/app/views/admin/shared/_modal_img.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade image-modal" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade image-modal" id="modalImg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
