--- a/app/views/admin/shared/_modal_tip.html.erb
+++ b/app/views/admin/shared/_modal_tip.html.erb
@@ -1,4 +1,4 @@
-<div id="modal-tips" class="modal fade in" aria-labelledby="myModalLabel" style="display: none;">
+<div id="modalTip" class="modal fade in" aria-labelledby="myModalLabel" style="display: none;">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
