setloic & admin layout

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -18,6 +18,8 @@
         </section>
       </div>
     </div>
+    <%= render 'shared/modal_tip' %>
+    <%= render 'admin/shared/modal_img' %>
   </body>
 </html>
 
