--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -26,5 +26,5 @@
 
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: font-url('fonts/glyphicons-halflings-regular.woff2') format('woff2')
+  //src: font-url('fonts/glyphicons-halflings-regular.woff2') format('woff2')
 }
